[package]
name = "k0hax-snmpv3"
authors = ["Michael Englehorn"]
version = "0.1.0"
edition = "2021"

[[example]]
name = "get-snmp"
#crate-type = ["bin"]

[dependencies]
anyhow = "1.0.77"
rand = "0.7.3"
serde = { version = "1.0.193", features = ["derive"] }
serde-lexpr = "0.1.3"
serde-pickle = "1.1.1"
serde_cbor = "0.11.2"
serde_json = "1.0.108"
serde_yaml = "0.9.29"
snmp_mp = "0.1.0"
snmp_usm = "0.2.1"

[dev-dependencies]
clap = { version = "4.4.12", features = ["derive"] }

