[package]
name = "snmpv3-bindgen"
version = "0.1.0"
edition = "2021"
authors = ["Michael Englehorn <michael@englehorn.com>"]
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "k0haxsnmpv3"
crate-type = ["cdylib"]

[dependencies]
k0hax-snmpv3 = { path = "../" }

[build-dependencies]
cbindgen = "0.26.0"
